--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate": "prisma generate"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.5",
-    "@prisma/client": "^5.4.2",
+    "@prisma/client": "^5.9.1",
     "firebase": "^10.5.0",
     "next": "13.5.6",
     "next-auth": "^4.24.3",
-    "prisma": "^5.4.2",
     "react": "^18",
     "react-dom": "^18",
     "react-quill": "^2.0.0",
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "13.5.6"
+    "eslint-config-next": "13.5.6",
+    "prisma": "^5.9.1"
   }
 }
