--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^5.9.1",
-    "firebase": "^10.5.0",
+    "firebase": "^10.8.0",
     "next": "13.5.6",
     "next-auth": "^4.24.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "react-quill": "^2.0.0",
     "swr": "^2.2.4"
   },
