--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^5.9.1",
+    "dompurify": "^3.0.9",
     "firebase": "^10.8.0",
     "next": "13.5.6",
     "next-auth": "^4.24.3",
