--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@prisma/client": "^5.9.1",
     "dompurify": "^3.0.9",
     "firebase": "^10.8.0",
-    "next": "13.5.6",
+    "next": "^15.1.3",
     "next-auth": "^4.24.3",
     "react": "^18",
     "react-dom": "^18",
