--- a/package.json
+++ b/package.json
@@ -10,21 +10,27 @@
     "generate": "prisma generate"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.5",
-    "@prisma/client": "^5.9.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "6.19.2",
+    "@tiptap/extension-image": "^3.15.3",
+    "@tiptap/react": "^3.15.3",
+    "@tiptap/starter-kit": "^3.15.3",
     "dompurify": "^3.0.9",
     "firebase": "^10.8.0",
-    "next": "^15.1.3",
-    "next-auth": "^4.24.3",
+    "next": "^14.2.3",
+    "next-auth": "^4.24.11",
+    "prisma": "6.19.2",
+    "quill": "^2.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
-    "react-quill": "^2.0.0",
     "swr": "^2.2.4"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.23",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
-    "prisma": "^5.9.1"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17"
   }
 }
